# AwesomeCICD

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  Dockerfile  README.md  TODO.md  badges.sh  cloud.py  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  env.sh  pyproject.toml  requirements.txt
.github/workflows/: build.yml  linter.yml  static-check.yml  static.yml  workflow.yml
src/: asgi.py
src/users/: router.py
tests/: test.py
tests/utest_users/: __init__.py  test.py
