[tool.poetry]
name = "awesomegitlab"
version = "0.1.0"
description = ""
authors = ["StepanGavrilov <sgavrilov@mobiledep.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
pytest = "^7.2.0"
flake8 = "^6.0.0"
redis = "^4.4.0"
httpx = "^0.23.1"
coverage = "^6.5.0"
pre-commit = "^2.20.0"
types-redis = "^4.3.21.6"
mypy = "^0.991"
click = "8.0.3"
black = "22.3.0"
fastapi-keycloak = "1.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
